<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">PrizeX</string>
    <string name="msg_rationale">You need to provide Storage access to update profile pic</string>
    <string name="txt_info">Info</string>
    <string name="txt_warning">Warning</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="slidetitle1" tools:ignore="Missingtext_translation">Ready to Win?</string>
    <string name="secondtittle1" tools:ignore="Missingtext_translation">Auctions</string>
    <string name="thirdtittle1" tools:ignore="Missingtext_translation">Feeling Lucky?</string>
    <string name="fourthtittle1" tools:ignore="Missingtext_translation">Shop</string>
    <string name="fifthtittle1" tools:ignore="Missingtext_translation">Let\'s Begin</string>
    <string name="slidetitle2" tools:ignore="Missingtext_translation">Huge Discounts</string>
    <string name="secondtittle2" tools:ignore="Missingtext_translation">Get your winnings delivered in 7 days</string>
    <string name="thirdtittle2" tools:ignore="Missingtext_translation">Refer your friends and earn free coins</string>
    <string name="slidetitle3" tools:ignore="Missingtext_translation">Get ready to explore a world of excitement and convenience, all in one place.</string>
    <string name="secondtittle3" tools:ignore="Missingtext_translation">Dive into the world of auctions, Win big and snag your favorite items at incredible prices!</string>
    <string name="thirdtittle3" tools:ignore="Missingtext_translation">Try your hand at our raffles for a chance to win amazing prizes, every ticket is a potential jackpot!</string>
    <string name="fourthtittle3" tools:ignore="Missingtext_translation">Explore our diverse shop filled with curated products just for you. From trendy gadgets to classics, there\'s something for everyone. </string>
    <string name="fifthtittle3" tools:ignore="Missingtext_translation">Click on "Get Started" and start your Journey</string>
    <string name="gotit_txt" tools:ignore="Missingtext_translation">I got it!</string>
    <string name="skip_txt" tools:ignore="Missingtext_translation">Explore App</string>
    <string name="txt_continue" tools:ignore="Missingtext_translation">Continue</string>
    <string name="text_200" tools:ignore="Missingtext_translation">Every 100th   ticket wins</string>
    <string name="tc">\ Terms and Conditions </string>
    <string name="privacy">\ Privacy Policy</string>
    <string name="fourthtittle2" tools:ignore="Missingtext_translation">Fast Deliveries</string>
    <string name="fifthtittle2">Refer and Earn</string>
    <string name="facebook_app_id" translatable="false">1142384800337600</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1142384800337600</string>
    <string name="facebook_client_token" translatable="false">42300571eaf296895d42e13326eedfc5</string>
    <string name="title_activity_loto_detail" translatable="false">LotoDetailActivity</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_dynamic_auction" translatable="false">DynamicAuctionActivity</string>
    <string name="title_activity_paystack" translatable="false">PaystackActivity</string>
    <string name="string1">Your Bids</string>
    <string name="string2">All Participants</string>
    <string name="string3">Your Tickets</string>
    <string name="string4">Item Type</string>
    <string name="string5">Read Less</string>
    <string name="string6">Read More..</string>
    <string name="string7">Lowest Unique Bid </string>
    <string name="string8">Highest Unique Bid</string>
    <string name="string9">Redeem</string>
    <string name="string10">Coin Transactions</string>
    <string name="string11">Update Profile</string>
    <string name="string12">Purchase History</string>
    <string name="string13">Let\'s Play &amp; Win</string>
    <string name="string14">Your Profile</string>
    <string name="string15">Coin</string>
    <string name="string15_1">Coin Shop 🛒</string>
    <string name="string16">Winner</string>
    <string name="string17">Earn</string>
    <string name="string18">Play For </string>
    <string name="playfor0">Play For Free</string>
    <string name="redeemfor0">Claim For Free</string>
    <string name="string19">Order ID: </string>
    <string name="string20">Amount: </string>
    <string name="string21">Order Amount </string>
    <string name="string22">Penny Auction</string>
    <string name="string23">\ Coins will be deducted from your coin balance on confirmation</string>
    <string name="string24">Bid For</string>
    <string name="string25"> Bidders</string>
    <string name="string26">Current Bid</string>
    <string name="string27">Kudos, You are currently winning</string>
    <string name="string28">No bids yet, starting bid </string>
    <string name="string29">\ Is Currently Winning</string>
    <string name="string30">Auction Ends in:- Loading..</string>
    <string name="string31">It\'s Gone.. The Auction Has Ended</string>
    <string name="string32">\ Privacy Policy</string>
    <string name="string33">Your Ticket Number</string>
    <string name="string34">Are you sure you want to purchase </string>
    <string name="string35">tickets?</string>
    <string name="string36">Insufficient Coins, Please Buy some coins to participate.</string>
    <string name="string37">Ok</string>
    <string name="string38">Participants</string>
    <string name="string39">Coin:</string>
    <string name="string40">for</string>
    <string name="string41">Ends in:- Loading..</string>
    <string name="string42">Ends in</string>
    <string name="string43">Refer &amp; Earn</string>
    <string name="string44">Your Tickets</string>
    <string name="string45">My Recharges</string>
    <string name="string46">\ Coins Available</string>
    <string name="string47">Your Code</string>
    <string name="string48">Order Received</string>
    <string name="string49">Order Rejected</string>
    <string name="string50">We have detected some unethical ways used by you to earn coins, \n For any questions you can email us.</string>
    <string name="string51">Share Now</string>
    <string name="string52">All Bidders</string>
    <string name="string53">Your Bids</string>
    <string name="string54">Bid For 1</string>
    <string name="string55">Single Bid</string>
    <string name="string56">Multiple Bid</string>
    <string name="string57">Bid Above 1</string>
    <string name="string58">OR</string>
    <string name="string59">Set New Password</string>
    <string name="string60">For your account linked to : mobno</string>
    <string name="string61">Mobile Number</string>
    <string name="string62">You haven\'t participated yet</string>
    <string name="string63">Skip</string>
    <string name="string64">By continuing, you agree to our</string>
    <string name="string65">\ and </string>
    <string name="string66">Sign In</string>
    <string name="string67">Create Account</string>
    <string name="string68">Explore App --></string>
    <string name="string69">Ends in:- 00d 00h 00m 00s</string>
    <string name="string70">Players</string>
    <string name="string71">Whoops!</string>
    <string name="string72">We can\'t seem to find what you\n are looking for</string>
    <string name="string73"> Try Again </string>
    <string name="string74">Payment Information</string>
    <string name="string75">Pay</string>
    <string name="string76">Play For 1000</string>
    <string name="string77">11111 Biddders</string>
    <string name="string78">Your Address:-</string>
    <string name="string79">Place Order</string>
    <string name="string80">• Refer the App to your friends</string>
    <string name="string81">• When your friend registers you get free Coins</string>
    <string name="string82">• Your Friend also get free Coin for signing up with your code</string>
    <string name="string83">Bid Range</string>
    <string name="string84">Place multiple bids using this feature</string>
    <string name="string85">to</string>
    <string name="string86">Something Went Wrong!!</string>
    <string name="string87">Submit Bid</string>
    <string name="string88">Watch Ad</string>
    <string name="string89">TIP: Here\'s a secret!! </string>
    <string name="string91">Lowest Unique Bid:</string>
    <string name="string92">Product Name</string>
    <string name="string93">Won by:- </string>
    <string name="string94">High Unique Bid:-</string>
    <string name="string95">Order ID</string>
    <string name="string96">Okay</string>
    <string name="string97">Please click on confirm payment for completion of order</string>
    <string name="string98">Seller Profile</string>
    <string name="string99">Link</string>
    <string name="string100">Bid Placed</string>
    <string name="string101">Bid Placed Successfully!</string>
    <string name="string102">Order Received!</string>
    <string name="string103">You can track the status of your order in your profile</string>
    <string name="string104">My Orders</string>
    <string name="string105">Rate Us</string>
    <string name="string106">Enter your Email ID</string>
    <string name="string107">Cancel</string>
    <string name="string108">Claim Prize</string>
    <string name="string109">Watch &amp; Earn</string>
    <string name="string110">Edit Profile</string>
    <string name="string111">Your Name</string>
    <string name="string133">Order Confirmation 😇</string>
    <string name="string168">Enter mobile number</string>
    <string name="string177">Password</string>
    <string name="string179">your password</string>
    <string name="string180">Don\'t have an account ?</string>
    <string name="string181">Forgot Password ?</string>
    <string name="string190">Change Language</string>
    <string name="string191">Login</string>
    <string name="string192">Sign-Up Now</string>
    <string name="string231">Play</string>
    <string name="string233">You need to login / register to access this page</string>
    <string name="string248">Submit</string>
    <string name="string313">Register</string>
    <string name="string315">Demo Login Details:-</string>
    <string name="string316">Mobile Number:- 70013</string>
    <string name="string317">Password:- 123</string>
    <string name="string453">You</string>
    <string name="string454">Winners </string>
    <string name="string498">Enter a nickname for this address</string>
    <string name="string499">Nickname</string>
    <string name="string501">Submit</string>
    <string name="shop">Shop</string>
    <string name="string351">Login</string>
    <string name="string352">Welcome Back</string>
    <string name="string353">Hello There, Sign In to Continue!</string>
    <string name="string354">Mobile Number</string>
    <string name="string373">My Participation\'s</string>
    <string name="title_home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="order_comment">Any comments (optional)</string>
    <string name="order_city">City</string>
    <string name="order_zip">Zip Code</string>
    <string name="order_address2">Address Line 2 (optional)</string>
    <string name="order_address">Street Address</string>
    <string name="order_enteraddress">Enter your Address</string>
    <string name="areyousure">Are you sure you want to cancel your subscription?</string>
    <string name="keepplan">Keep Plan</string>
    <string name="cancelplan">Cancel Subscription</string>
</resources>