<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">

    <include layout="@layout/activity_loading"></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:baselineAligned="false"
        android:fontFamily="@font/opensansbold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/btncolor"
        android:textSize="30dp"
        android:visibility="gone">

    </TextView>

    <ImageView
        android:id="@+id/imglogin"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_gravity="center"
        android:src="@drawable/ic_addtop"
        android:visibility="gone">

    </ImageView>

    <TextView
        android:id="@+id/accesspage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/opensansmediam"
        android:text="@string/string233"
        android:textAlignment="center"
        android:visibility="gone"
        android:textColor="@color/redd"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/txtView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/opensansmediam"
        android:text="@string/string61"
        android:textSize="18dp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:id="@+id/logintop"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:orientation="vertical"
            android:padding="14dp">

            <ImageView
                android:id="@+id/backk"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="25dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_back"
                android:visibility="gone"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:fontFamily="monospace"
                android:text="@string/string351"
                android:textColor="@color/whitewhite"
                android:textSize="45dp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/backcard"
            android:orientation="vertical"
            android:padding="25dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string352"
                android:textColor="@color/primarylight"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="1dp"
                android:text="@string/string353"
                android:textColor="@color/darkgraywhite" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="monospace"
                android:inputType="number"
                android:text="@string/string354"
                android:textColor="@color/darkgraywhite"
                android:textSize="16dp" />


            <LinearLayout
                android:id="@+id/Layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:background="@drawable/rounded_corner"
                android:orientation="horizontal">

                <com.rilixtech.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    app:ccp_defaultNameCode="IN"
                    app:ccp_textSize="18dp" />

                <EditText
                    android:id="@+id/edForgotNum"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/string168"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:text=""
                    android:textSize="18dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/txtView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/opensansmediam"
                android:text="@string/string177"
                android:textSize="18dp"
                android:visibility="gone" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="monospace"
                android:text="@string/string177"
                android:textColor="@color/darkgraywhite"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/edPass"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginTop="9dp"
                android:backgroundTint="@color/black"
                android:hint="@string/string179"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:text=""
                android:textSize="18dp" />


            <TextView
                android:id="@+id/txtLoginActi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/string191"
                android:textColor="@color/whitewhite"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/txtForgetPassw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginTop="8dip"
                android:hint="@string/string181"
                android:textColorHint="@color/darkgraywhite"
                android:textColor="@color/darkgray"
                android:textStyle="bold"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/Layout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:hint="@string/string180"
                    android:textColorHint="@color/darkgraywhite"
                    android:textColor="@color/gray"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/txtSignupButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/string192"
                    android:textColor="@color/primarylight"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/txtChooseLang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/string190"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/string191"
        android:textColor="@color/whitewhite"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/string313"
        android:textColor="@color/whitewhite"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/string315"
        android:textColor="@color/primarylight"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/string316"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/string317"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/string58"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:visibility="gone" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:visibility="gone" />

</LinearLayout>
