<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_tab"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string133"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@drawable/et_filled_up"
        android:backgroundTint="#ededed"
        android:paddingTop="10dip"
        android:paddingBottom="4dip"
        android:paddingHorizontal="10dip"
        android:textColor="@color/black" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_filled_profile_down"
        android:backgroundTint="#ededed"
        android:paddingBottom="32dip"
        android:layout_marginTop="3dip"
        android:paddingTop="16dip"
        android:orientation="vertical"
        android:paddingHorizontal="10dip"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_enteraddress"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/order_address"
            android:layout_marginTop="10dip"
            android:background="@drawable/et_filled"
            android:backgroundTint="#d3cbc0"
            android:padding="13dip"
            android:textColor="@color/black"
            android:id="@+id/street"
            android:textColorHint="@color/black"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/order_address2"
            android:layout_marginTop="14dip"
            android:background="@drawable/et_filled"
            android:backgroundTint="#d3cbc0"
            android:padding="13dip"
            android:textColor="@color/black"
            android:id="@+id/addln2"
            android:textColorHint="@color/black"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dip">



            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/order_city"
                android:layout_weight="1"
                android:background="@drawable/et_filled"
                android:backgroundTint="#d3cbc0"
                android:padding="13dip"
                android:textColor="@color/black"
                android:id="@+id/city"
                android:layout_marginEnd="10dip"
                android:textColorHint="@color/black"
                android:textStyle="bold"/>


            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/order_zip"
                android:layout_marginStart="10dip"
                android:background="@drawable/et_filled"
                android:backgroundTint="#d3cbc0"
                android:padding="13dip"
                android:textColor="@color/black"
                android:id="@+id/pin_code"
                android:textColorHint="@color/black"
                android:layout_weight="1"
                android:textStyle="bold"/>
        </LinearLayout>



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/order_comment"
            android:layout_marginTop="16dip"
            android:background="@drawable/et_filled"
            android:backgroundTint="#d3cbc0"
            android:padding="13dip"
            android:textColor="@color/black"
            android:id="@+id/comments"
            android:textColorHint="@color/black"
            android:textStyle="bold"/>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string248"
            android:layout_marginTop="25dip"
            android:background="@drawable/et_filled_profile"
            android:backgroundTint="@color/white"
            android:paddingVertical="14dip"
            android:paddingHorizontal="25dip"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:id="@+id/submit"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>