<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@drawable/bg_tab"
    android:orientation="vertical"
    android:paddingTop="7dp"
    android:paddingLeft="7dp"
    android:paddingBottom="7dp"
    android:paddingRight="7dp"
    android:layout_margin="30dp"    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/nickname_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string498"
        android:textSize="16sp"
        android:background="@color/white"
        android:layout_marginBottom="8dp" />

    <EditText
        android:background="@drawable/bg_whitebgoutlineblack"
        android:padding="@dimen/_7sdp"
        android:id="@+id/nickname_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/string499" />

    <Button
        android:id="@+id/nickname_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/string501"
        android:layout_marginTop="16dp" />
</LinearLayout>
